[gd_scene load_steps=6 format=2]

[ext_resource path="res://inventory.gd" type="Script" id=1]
[ext_resource path="res://Asset Lib/Art/background.tres" type="StyleBox" id=2]
[ext_resource path="res://Asset Lib/Art/itempickup.png" type="Texture" id=3]
[ext_resource path="res://Asset Lib/Art/itempickup_highlight.png" type="Texture" id=4]
[ext_resource path="res://Asset Lib/Font/TypewriterFont.tres" type="DynamicFont" id=5]

[node name="Control" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 554.0
margin_right = 379.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="." index="0"]

modulate = Color( 0.144531, 0.144531, 0.144531, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -2.0
margin_top = 32.0
margin_right = 342.0
margin_bottom = 167.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panelf = ExtResource( 2 )
custom_styles/panel = ExtResource( 2 )
custom_styles/panelnc = ExtResource( 2 )
_sections_unfolded = [ "Material", "Rect", "Theme", "Visibility", "custom_styles" ]

[node name="Container" type="Container" parent="." index="1"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -134.0
margin_right = -40.0
margin_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility" ]

[node name="item1" type="Node2D" parent="Container" index="0"]

editor/display_folded = true
visible = false
position = Vector2( 32.2259, 36.5482 )

[node name="sprite" type="Sprite" parent="Container/item1" index="0"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="sprite2" type="Sprite" parent="Container/item1" index="1"]

visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Panel" type="Panel" parent="Container/item1" index="2"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -26.0
margin_top = -19.0
margin_right = 27.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="item2" type="Node2D" parent="Container" index="1"]

editor/display_folded = true
visible = false
position = Vector2( 98.25, 102.548 )

[node name="sprite" type="Sprite" parent="Container/item2" index="0"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="sprite2" type="Sprite" parent="Container/item2" index="1"]

visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Panel" type="Panel" parent="Container/item2" index="2"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -26.0
margin_top = -19.0
margin_right = 27.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="item3" type="Node2D" parent="Container" index="2"]

editor/display_folded = true
visible = false
position = Vector2( 98.2259, 36.5482 )

[node name="sprite" type="Sprite" parent="Container/item3" index="0"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="sprite2" type="Sprite" parent="Container/item3" index="1"]

visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Panel" type="Panel" parent="Container/item3" index="2"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -26.0
margin_top = -19.0
margin_right = 27.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="item4" type="Node2D" parent="Container" index="3"]

editor/display_folded = true
visible = false
position = Vector2( 164.226, 102.548 )

[node name="sprite" type="Sprite" parent="Container/item4" index="0"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="sprite2" type="Sprite" parent="Container/item4" index="1"]

visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Panel" type="Panel" parent="Container/item4" index="2"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -26.0
margin_top = -19.0
margin_right = 27.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="item5" type="Node2D" parent="Container" index="4"]

editor/display_folded = true
visible = false
position = Vector2( 164.226, 36.5482 )

[node name="sprite" type="Sprite" parent="Container/item5" index="0"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="sprite2" type="Sprite" parent="Container/item5" index="1"]

visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Panel" type="Panel" parent="Container/item5" index="2"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -26.0
margin_top = -19.0
margin_right = 27.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="item6" type="Node2D" parent="Container" index="5"]

editor/display_folded = true
visible = false
position = Vector2( 230.226, 102.548 )

[node name="sprite" type="Sprite" parent="Container/item6" index="0"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="sprite2" type="Sprite" parent="Container/item6" index="1"]

visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Panel" type="Panel" parent="Container/item6" index="2"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -26.0
margin_top = -19.0
margin_right = 27.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="item7" type="Node2D" parent="Container" index="6"]

editor/display_folded = true
visible = false
position = Vector2( 230.25, 36.5482 )

[node name="sprite" type="Sprite" parent="Container/item7" index="0"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="sprite2" type="Sprite" parent="Container/item7" index="1"]

visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Panel" type="Panel" parent="Container/item7" index="2"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -26.0
margin_top = -19.0
margin_right = 27.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="item8" type="Node2D" parent="Container" index="7"]

editor/display_folded = true
visible = false
position = Vector2( 296.051, 102.548 )

[node name="sprite" type="Sprite" parent="Container/item8" index="0"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="sprite2" type="Sprite" parent="Container/item8" index="1"]

visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Panel" type="Panel" parent="Container/item8" index="2"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -26.0
margin_top = -19.0
margin_right = 27.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="item0" type="Node2D" parent="Container" index="8"]

editor/display_folded = true
visible = false
position = Vector2( 32.2259, 102.548 )

[node name="sprite" type="Sprite" parent="Container/item0" index="0"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="sprite2" type="Sprite" parent="Container/item0" index="1"]

visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Panel" type="Panel" parent="Container/item0" index="2"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -26.0
margin_top = -19.0
margin_right = 27.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="Panel2" type="Panel" parent="." index="2"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -2.0
margin_top = -21.0
margin_right = 342.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Rect", "Visibility" ]

[node name="Label" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = -21.0
margin_right = -40.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags", "Theme", "custom_fonts" ]

[connection signal="mouse_entered" from="Container/item1/Panel" to="." method="_on_Panel_mouse_entered" binds= [ 1 ]]

[connection signal="mouse_exited" from="Container/item1/Panel" to="." method="_on_Panel_mouse_exited" binds= [ 1 ]]

[connection signal="mouse_entered" from="Container/item2/Panel" to="." method="_on_Panel_mouse_entered" binds= [ 2 ]]

[connection signal="mouse_exited" from="Container/item2/Panel" to="." method="_on_Panel_mouse_exited" binds= [ 2 ]]

[connection signal="mouse_entered" from="Container/item3/Panel" to="." method="_on_Panel_mouse_entered" binds= [ 3 ]]

[connection signal="mouse_exited" from="Container/item3/Panel" to="." method="_on_Panel_mouse_exited" binds= [ 3 ]]

[connection signal="mouse_entered" from="Container/item4/Panel" to="." method="_on_Panel_mouse_entered" binds= [ 4 ]]

[connection signal="mouse_exited" from="Container/item4/Panel" to="." method="_on_Panel_mouse_exited" binds= [ 4 ]]

[connection signal="mouse_entered" from="Container/item5/Panel" to="." method="_on_Panel_mouse_entered" binds= [ 5 ]]

[connection signal="mouse_exited" from="Container/item5/Panel" to="." method="_on_Panel_mouse_exited" binds= [ 5 ]]

[connection signal="mouse_entered" from="Container/item6/Panel" to="." method="_on_Panel_mouse_entered" binds= [ 6 ]]

[connection signal="mouse_exited" from="Container/item6/Panel" to="." method="_on_Panel_mouse_exited" binds= [ 6 ]]

[connection signal="mouse_entered" from="Container/item7/Panel" to="." method="_on_Panel_mouse_entered" binds= [ 7 ]]

[connection signal="mouse_exited" from="Container/item7/Panel" to="." method="_on_Panel_mouse_exited" binds= [ 7 ]]

[connection signal="mouse_entered" from="Container/item8/Panel" to="." method="_on_Panel_mouse_entered" binds= [ 8 ]]

[connection signal="mouse_exited" from="Container/item8/Panel" to="." method="_on_Panel_mouse_exited" binds= [ 8 ]]

[connection signal="mouse_entered" from="Container/item0/Panel" to="." method="_on_Panel_mouse_entered" binds= [ 0 ]]

[connection signal="mouse_exited" from="Container/item0/Panel" to="." method="_on_Panel_mouse_exited" binds= [ 0 ]]


